# nvision-cpp

./: .appveyor.yml  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  buildfile  manifest  packages.manifest  repositories.manifest  tennis500.ppm
.github/workflows/: build2.yml  cmake.yml
build-config/: clang.debug.build  clang.release.build  gcc.debug.build  gcc.release.build  msvc.debug.build  msvc.release.build
dep/: CMakeLists.txt
doc/: Doxyfile
examples/: CMakeLists.txt  detect_corners.cpp  detect_edges.cpp  downsample.cpp  draw_shapes.cpp  filter_smooth.cpp  find_matches.cpp  optical_flow.cpp  resize_image.cpp  simple_fast.cpp  simple_gauss.cpp  updown_sample.cpp  upsample.cpp
examples/draw/: .gitignore  CMakeLists.txt  buildfile  filled_polygon.cpp  simple_lines.cpp
examples/feature/: CMakeLists.txt  buildfile  simple_fast.cpp  simple_harris.cpp  simple_orb.cpp  simple_shi_tomasi.cpp
examples/filter/: .gitignore  CMakeLists.txt  buildfile  simple_box.cpp  simple_canny.cpp  simple_diffusion.cpp  simple_gauss.cpp  simple_gradient.cpp  simple_laplace.cpp  simple_scharr.cpp  simple_sobel.cpp
examples/imageio/: .gitignore  CMakeLists.txt  buildfile  convert_image.cpp  resize_image.cpp
examples/optflow/: CMakeLists.txt  buildfile  colorwheel.cpp  simple_lucas_kanade.cpp
include/: buildfile
include/cve/: border_handling.h  color_converter.h  core.h  draw.h  feature.h  filter.h  gaussian_filter.h  image.h  imageio.h  kernel.h  laplacian_filter.h  math.h  optflow.h  sobel_operator.h
include/cve/core/: assert.h  bilinear_interpolation.h  border_handling.h  clamp.h  downsample.h  image.h  kernel.h  math.h  matrix.h  penalizer_functors.h  resize_image.h  upsample.h
include/cve/draw/: color_converter.h  colors.h  match_drawer.h  shape_drawer.h
include/cve/feature/: brief_descriptor.h  brief_extractor.h  brute_force_knn.h  brute_force_matcher.h  canny_detector.h  fast_detector.h  fast_detector_base.h  fast_features.h  harris_base_detector.h  harris_detector.h  harris_detector_base.h  harris_features.h  harris_features_base.h  orb_descriptor.h  orb_detector.h  orb_extractor.h  shi_tomasi_detector.h  shi_tomasi_features.h
include/cve/filter/: backward_differences_filter.h  box_filter.h  central_differences_filter.h  derivative_filter.h  diffusion_filter.h  forward_differences_filter.h  gauss_filter.h  gradient_filter.h  laplace_filter.h  recursive_blur_filter.h  recursive_filter.h  scharr_filter.h  sobel_filter.h
include/cve/imageio/: imageio.h  jpg.h  pgm.h  png.h  ppm.h  state_saver.h
include/cve/optflow/: color_map.h  horn_schunck_detector.h  lucas_kanade_detector.h  robust_flow_detector.h
include/cve/projective/: camera_calibration.h  direct_linear_transformation.h  fundamental_matrix_calculator.h  homography_decomposition.h  point_normalization.h
include/cve/src/core/: color_space.h  color_space_bgr.h  color_space_bgra.h  color_space_gray.h  color_space_hsv.h  color_space_rgb.h  color_space_rgba.h  (+16 more)
include/nvision/: core.h  draw.h  filter.h  optflow.h
libnvision/: manifest
libnvision-examples/: buildfile  manifest
libnvision-examples/draw/: buildfile
libnvision-examples/feature/: .gitignore  buildfile  simple_shi_tomasi.cpp
libnvision-examples/filter/: buildfile  simple_box.cpp  simple_canny.cpp  simple_diffusion.cpp  simple_gradient.cpp
libnvision-examples/imageio/: .gitignore  buildfile  resize_image.cpp
libnvision-examples/optflow/: buildfile  colorwheel.cpp  simple_lucas_kanade.cpp
libnvision-jpeg/: buildfile  manifest
libnvision-jpeg/include/: buildfile
libnvision-png/: manifest
libnvision-png/include/: buildfile
libnvision-tests/: buildfile  manifest
libnvision-tests/legacy/core/: pixel_color_space_test.cpp
libnvision-tests/legacy/feature/: fast_feature_test.cpp  orb_descriptor_test.cpp  orb_feature_test.cpp
libnvision-tests/legacy/filter/: box_filter_test.cpp  canny_edge_filter_test.cpp  gauss_filter_test.cpp  laplace_filter_test.cpp
libnvision-tests/src/: buildfile  corner_generator.h
libnvision-tests/src/core/: image_resizing_test.cpp  pixel_test.cpp
libnvision-tests/src/feature/: harris_feature_test.cpp
libnvision-tests/src/filter/: central_differences_filter_test.cpp  scharr_filter_test.cpp
libnvision/include/nvision/: feature.h  imageio.h
test/: CMakeLists.txt  test_kernel.cpp
test/assert/: eigen_require.h
test/feature/: brief_descriptor.cpp  brief_extractor.cpp  brute_force_knn.cpp  fast_detector.cpp  fast_features.cpp  harris_detector.cpp  harris_features.cpp  shi_tomasi_detector.cpp  shi_tomasi_features.cpp
test/filter/: backward_differences_filter.cpp  box_filter.cpp  central_differences_filter.cpp  forward_differences_filter.cpp  gauss_filter.cpp  scharr_filter.cpp  sobel_filter.cpp
test/include/: corner_generator.h  eigen_require.h
test/projective/: camera_calibration.cpp  direct_linear_transformation.cpp  eight_point_algorithm.cpp  homography_decomposition.cpp
test/src/core/: image_correlation_test.cpp  image_interpolation_test.cpp  image_resizing_test.cpp
test/src/filter/: box_filter_test.cpp  canny_edge_filter_test.cpp  forward_differences_filter_test.cpp  laplace_filter_test.cpp
tests/: buildfile
tests/src/: buildfile  corner_generator.h  eigen_require.h
tests/src/contour/: contour_test_helper.h  pavlidis_tracer_test.cpp  radial_sweep_tracer_test.cpp
tests/src/core/: image_correlation_test.cpp  image_interpolation_test.cpp  pixel_color_space_test.cpp  pixel_test.cpp
tests/src/feature/: brief_descriptor_test.cpp  fast_feature_test.cpp  harris_feature_test.cpp  orb_descriptor_test.cpp  orb_feature_test.cpp  shi_tomasi_feature_test.cpp
tests/src/filter/: backward_differences_filter_test.cpp  binominal_filter_test.cpp  canny_edge_filter_test.cpp  central_differences_filter_test.cpp  diffusion_filter_test.cpp  forward_differences_filter_test.cpp  gauss_filter_test.cpp  laplace_filter_test.cpp  scharr_filter_test.cpp  sobel_filter_test.cpp
tests/src/projective/: direct_linear_transformation.cpp  eight_point_algorithm.cpp  point_normalization.cpp
(+163 files in other folders)
