# CMakeLists.txt
#
#     Author: Fabian Meyer
# Created On: 19 Jul 2019

add_executable(detect_corners "detect_corners.cpp")
add_executable(detect_edges "detect_edges.cpp")
add_executable(draw_shapes "draw_shapes.cpp")
add_executable(filter_smooth "filter_smooth.cpp")
add_executable(find_matches "find_matches.cpp")
add_executable(optical_flow "optical_flow.cpp")
add_executable(updown_sample "updown_sample.cpp")
